tests/fixtures/errors/private_escape.full
error[E0102]: '.private' of 'Bag' may only be taken by 'Bag' or a holder of its '.private' handle
 --> private_escape.z:9:15
   9 |         bp: b.private
     |               ^^^^^^^
1 error found
